added Character Base Class
added C++ CharacterBaseClass

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -331,7 +331,7 @@ LastLevel=/Game/Maps/StartupMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -554,6 +554,9 @@ RigVMEditorSettings="\"Object\" "
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=SkeletalMeshEditor
+RecentAssetEditors=SkeletonEditor
+OpenAssetsAtExit=/Game/Assets/Characters/Aura/SK_Aura.SK_Aura
+OpenAssetsAtExit=/Game/Assets/Characters/Aura/SKM_Aura.SKM_Aura
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -617,7 +620,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/Maps
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -828,6 +831,7 @@ TextureImportSettings.VirtualTextures=True
 TextureImportSettings.ImportSettings=True
 UMGEditorProjectSettings.Compiler=True
 UMGEditorProjectSettings.Class Filtering=True
+UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 UMGEditorProjectSettings.Designer=True
 AndroidRuntimeSettings.APK Packaging=True
@@ -1321,7 +1325,6 @@ EditorKeyboardShortcutSettings.ModelingToolsMeshVertexPaintTool=True
 EditorKeyboardShortcutSettings.RigVMBlueprint=True
 WorldPartitionEditorSettings.WorldPartition=True
 RigVMEditorSettings.Interaction=True
-UMGEditorProjectSettings.Designer =True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1690,8 +1693,8 @@ Contexts=(Name="AnimationEditor",Commands=)
 Contexts=(Name="AnimationEditor.Viewport0",Commands=)
 
 [RootWindow]
-ScreenPosition=X=516.000 Y=0.000
-WindowSize=X=1288.000 Y=728.000
+ScreenPosition=X=1392.000 Y=33.000
+WindowSize=X=2701.000 Y=728.000
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -2746,9 +2749,9 @@ MaterialEditor.TimeStamp=2023.03.23-02.45.31
 MaterialEditor.LastCompileMethod=Unknown
 TextureEditor.TimeStamp=2023.04.05-16.11.43
 TextureEditor.LastCompileMethod=External
-SkeletonEditor.TimeStamp=2023.09.17-21.28.01
+SkeletonEditor.TimeStamp=2023.10.21-14.59.55
 SkeletonEditor.LastCompileMethod=External
-PinnedCommandList.TimeStamp=2023.09.17-21.28.00
+PinnedCommandList.TimeStamp=2023.10.21-14.59.51
 PinnedCommandList.LastCompileMethod=External
 PhysicsAssetEditor.TimeStamp=2023.04.05-16.11.42
 PhysicsAssetEditor.LastCompileMethod=External
@@ -2814,6 +2817,10 @@ RigVMEditor.TimeStamp=2023.10.21-15.41.59
 RigVMEditor.LastCompileMethod=External
 D3D11RHI.TimeStamp=2023.10.21-14.59.38
 D3D11RHI.LastCompileMethod=Unknown
+Aura.TimeStamp=
+Aura.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2023.10.21-14.59.50
+NullDrv.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2934,6 +2941,7 @@ bConvertSceneUnit=False
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Assets/Characters/Aura/SKM_Aura
+MRUItem1=/Game/Assets/Characters/Aura/SK_Aura
 
 [PluginBrowser]
 InstalledPlugins=MetaHuman
